--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ducitc.team",
+  "homepage": "https://ducitc.github.io/ducitc.team",
   "version": "1.8.0",
   "description": "Material Kit React. Coded by Dania University College IT club",
   "private": true,
@@ -10,14 +11,14 @@
     "classnames": "2.2.6",
     "history": "4.9.0",
     "moment": "2.24.0",
-    "node-sass": "4.12.0",
+    "node-sass": "^4.12.0",
     "nouislider": "14.0.2",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-datetime": "2.16.3",
     "react-dom": "16.9.0",
     "react-router-dom": "5.0.1",
-    "react-scripts": "3.1.0",
+    "react-scripts": "^3.1.0",
     "react-slick": "0.25.2",
     "react-swipeable-views": "0.13.3"
   },
@@ -29,6 +30,7 @@
     "eslint-config-prettier": "6.0.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-react": "7.14.3",
+    "gh-pages": "^2.2.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "prettier": "1.18.2"
@@ -37,6 +39,8 @@
     "typescript": "3.5.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build && gulp licenses",
     "test": "react-scripts test --env=jsdom",
