Added gh-pages deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ducitc.team",
-  "homepage": "https://ducitc.github.io/ducitc.team",
+  "homepage": "https://ducitc.github.io/ducitc",
   "version": "1.8.0",
   "description": "Material Kit React. Coded by Dania University College IT club",
   "private": true,
